CSS no longer controls visibility of list-bulletin-report-pictos

--- a/app/css/scss/organisms/_bulletin.scss
+++ b/app/css/scss/organisms/_bulletin.scss
@@ -319,16 +319,12 @@
         padding: 0.5em 0 0 0;
       }
 
-      ~ li {
-        display: none;
-      }
+      // ~ li { display: none; }
 
-      .js-show-all-bulletin-report-pictos & {
-        display: none;
-        ~ li {
-          display: flex;
-        }
-      }
+      // .js-show-all-bulletin-report-pictos & {
+      //   display: none;
+      //   ~ li { display: flex; }
+      // }
     }
   }
 }
